Bug 1539766 - handle the cancel case for e10s bp r=kershaw a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D25315